Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -173,7 +173,6 @@ input[type=submit],
 }
 
 .widget .extendednavigation ul {
-	text-align: center;
 	border-top:1px solid rgba(0, 0, 0, 0.05);
 }
 .widget .extendednavigation li > .text,
